tests/duarouter/errors/no_output/options.duarouter
--net-file=input_net.net.xml --route-files=increasing_trips.trips.xml
